--- a/2button.html
+++ b/2button.html
@@ -8,6 +8,13 @@
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.15s ;
+    }
+    .Subscribe_button:hover{
+        opacity: 0.7;
+    }
+    .Subscribe_button:active{
+        opacity: 0.5;
     }
     .Join_button{
         background-color: white;
@@ -19,9 +26,19 @@
         width: 62px;
         border-radius: 2px;
         cursor: pointer;
+        transition: background-color 1s, color 1s;
         
 
     }
+    .Join_button:hover{
+        background-color: rgb(41, 118, 211);
+        color: white;
+        transition: background-color 1s, color 1s;
+    }
+    .Join_button:active{
+        opacity: 0.7;
+    }
+
     .Tweet_button{
         background-color: rgb(2, 137, 255);
         color: white;
@@ -33,8 +50,10 @@
         font-weight: bold;
         cursor: pointer;
         margin-left:8px;
+        box-shadow: 5px 5px 10px rgba(0,0,0.15) ;
 
     }
+    
 </style>
 <button class="Subscribe_button">SUBSCRIBE</button>
 <button class="Join_button">JOIN</button>
