--- a/youtube.html
+++ b/youtube.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github</title>
+    <title>github image</title>
+<style>
+
+  img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    object-position: bottom;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgb(114, 14, 14);
+    margin-top: 15px;
+}
+.style-search{
+margin-left: 12px;
+font-size: 10px;
+display:inline-block;
+
+}
+.video-stats{
+width: 300px;
+}
+</style>
 </head>
 <body>
-<img scr="image.jpeg">
+<input class="style-search" type="text" placeholder="Search">
+
+<div>
+  <img  src="image.jpeg"/>
+<p class="video-stats">
+  Student of IUBAT(International Business and agricultural Technology) 2nd Year Computer science and engineering
+
+</p>
+<P class="video-title">
+  Aspiring Developer 
+</P>
+</div>
 </body>
 </html>
